<resources>
    <string name="app_name">Walt</string>
    <string name="splash_btn_create">Create a wallet</string>
    <string name="splash_btn_import">Import wallet</string>
    <string name="main_tab_item1">Hot Wallet</string>
    <string name="main_tab_item2">my</string>
    <string name="main_tab_item0">Assets</string>
    <string name="main_tab_item7">Find</string>
    <string name="main_fragment_item_address">Address Book</string>
    <string name="main_fragment_item_setting">System Settings</string>
    <string name="main_fragment_item_help">Help Center</string>
    <string name="main_fragment_item_about">About us</string>
    <string name="main_fragment_hint2">Multi-chain wallet, multi-currency support \n large assets recommend the use of cold wallet management</string>
    <string name="index_price">total assets</string>
    <string name="index_add_title">Add a wallet</string>
    <string name="index_create_hint">Create a new wallet, and you can back up by exporting the private key, mnemonic, and keystore</string>
    <string name="index_import_hint">Import through existing wallet mnemonics or private keys</string>
    <string name="index_hint1">The wallet has not yet backed up the mnemonic. In order to prevent the loss of assets caused by forgetting the security password, deleting the APP or losing the mobile phone, please backup the mnemonic in time.</string>
    <string name="index_hint_title">Safety alert</string>
    <string name="import_keystore_hint">keystore text content</string>
    <string name="import_key_hint">Cleartext private key</string>
    <string name="import_ing">Importing…</string>
    <string name="import_keystore_txt">directly copy and paste the contents of the Walter Oriental official wallet keystore file to the input box. Or by generating a QR code of the Keystore content, scanning the entry</string>
    <string name="import_type">Importing Keystore type does not match the selected currency</string>
    <string name="import_keystore_err">keystore file error</string>
    <string name="import_txt_what1">What is a keystore</string>
    <string name="import_txt_what3">What is a mnemonic</string>
    <string name="what_words">What is a mnemonic?</string>
    <string name="what_privacy">What is a private key?</string>
    <string name="what_key">What is a keystore?</string>
    <string name="import_words_toast">Mnemonic invalid</string>
    <string name="import_words_toast2">Please enter twelve mnemonic words</string>
    <string name="import_key_toast">Please enter the correct private key </string>
    <string name="import_txt_hint">The password is used to encrypt the private key, the strength is very important!\n wallet will not store the password, and can not help you find it, please remember! </string>
    <string name="import_input_name_hint">Enter the wallet name</string>
    <string name="import_input_pwd_hint">Enter your password</string>
    <string name="import_input_pwd_hint2">Confirm your password</string>
    <string name="import_txt_agree">I have read and agree</string>
    <string name="import_txt_privacy">Services and Privacy Policy</string>
    <string name="import_dialog_title">backup wallet</string>
    <string name="create_dialog_txt">The blockchain wallet is different from the traditional website account, which is a cryptographic-based decentralized account system. \n\nYou must keep your wallet\'s private key and transaction password yourself, and any accidents will result in the loss of assets. \n\nWe recommend doing a double backup first, then typing in a small amount of test, and then starting to use it </string>
    <string name="create_dialog_words">backup mnemonic</string>
    <string name="create_dialog_words_hint">When you lose your wallet or forget your password, you can help restore it.</string>
    <string name="create_dialog_key">Backup keystore file </string>
    <string name="create_dialog_key_hint">official wallet format, transaction password protected private key file</string>
    <string name="create_dialog_btn">Back up now</string>
    <string name="about_version">current version %s</string>
    <string name="about_txt">Digital Ecological Wisdom Home Based on Block Chain</string>
    <string name="about_server">service agreement</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_log">version log</string>
    <string name="about_check">detect new version</string>
    <string name="help_title">Help Center</string>
    <string name="setting_language">Language</string>
    <string name="setting_jiedian">Node setup</string>
    <string name="setting_main">Main network</string>
    <string name="setting_test">Test network</string>
    <string name="language_en">English</string>
    <string name="language_zh">Simplified Chinese</string>
    <string name="words_title">Confirm mnemonic</string>
    <string name="words_sure">Confirm your wallet mnemonic </string>
    <string name="words_sure_hint">Please click on the mnemonic in order to confirm that your backup mnemonic is correct.</string>
    <string name="words_sure_finish">finish</string>
    <string name="words_sure_finish1">The mnemonic confirms the correct</string>
    <string name="words_sure_finish2">mnemonic confirmation error</string>
    <string name="exportwords_title">Backup mnemonics</string>
    <string name="exportwords_sure_hint">The mnemonic is used to restore the wallet or reset the wallet password, copy it accurately onto paper, and store it in a safe place that only you know. </string>
    <string name="exportwords_next">Next </string>
    <string name="exportkey_title">export keystore</string>
    <string name="exportkey_sure">Save offline</string>
    <string name="exportkey_sure_hint">Please copy and paste the keystore file to a safe, offline place to save. Don\'t save to mailbox notepad, web disk, chat tool, etc., very dangerous </string>
    <string name="exportkey_sure_hint_p">Do not save it to mailbox, notebook, Internet disk, chat tools, etc. It is very dangerous.</string>
    <string name="exportkey_sure1">Do not use network transmission</string>
    <string name="exportkey_sure_hint1">Do not transfer the keystore file through the network tool. Once it is acquired by the hacker, it will cause irreparable asset loss. It is recommended that offline devices be transmitted by QR code. </string>
    <string name="exportkey_sure_hint1_p">Do not transmit through network tools, once acquired by hackers, it will cause irreparable loss of assets. It is suggested that offline devices should be transmitted by two-dimensional code.</string>
    <string name="exportkey_sure2"> password safe save </string>
    <string name="exportkey_sure_hint2">For online save, it is recommended to save the keystore with a password security software with a higher security level. </string>
    <string name="exportkey_sure_hint2_p">It is recommended to use password management tools to manage.</string>
    <string name="exportkey_sure3">for direct scanning only</string>
    <string name="exportkey_sure_hint3">The QR code prohibits saving, screenshots, and taking photos. It is only for users to scan directly in a secure environment to facilitate the import of wallets. </string>
    <string name="exportkey_sure4">Use in a secure environment</string>
    <string name="exportkey_sure_hint4">Please use it if you are surrounded by no one and no camera. Once the QR code is acquired by others, it will cause irreparable loss of assets. </string>
    <string name="exportkey_next">copy keystore</string>
    <string name="exportkey_next2">Copy the private key</string>
    <string name="create_language">Language choice</string>
    <string name="create_toast_create">Creating a wallet…</string>
    <string name="create_toast_remark">Please enter the wallet name </string>
    <string name="create_toast_input_key">Please enter the private key </string>
    <string name="create_toast_input_keystore">Please enter keystore</string>
    <string name="create_toast_hasremark">wallet name already exists</string>
    <string name="create_toast_pwd">Please enter the password </string>
    <string name="create_toast_agree">Please read and agree to the "Service and Privacy Policy" </string>
    <string name="create_toast_no_equals">two password inconsistencies</string>
    <string name="create_htdf">Create USDP wallet at the same time</string>
    <string name="create_pwd_hint">8–16 digits and letters.</string>
    <string name="walletlist_title">wallet management</string>
    <string name="receive_title">receipt code</string>
    <string name="receive_copy_toast">has been copied to the clipboard</string>
    <string name="receive_hint">This address only accepts %s assets, please do not transfer to other currency assets, otherwise the assets will not be recovered.</string>
    <string name="send_price">balance:</string>
    <string name="send_err_pwd">Password error</string>
    <string name="send_input_pwd">Please enter the password</string>
    <string name="send_dialog_item1">order information</string>
    <string name="send_dialog_item2">transfer address</string>
    <string name="send_dialog_item3">export address</string>
    <string name="send_dialog_item4">amount</string>
    <string name="send_dialog_btn">OK</string>
    <string name="send_fee_hint">The higher the handling fee, the faster the transfer speed</string>
    <string name="send_fee_hint2">Note: ETH transfers need to be deducted part of the ETH for a single contract execution. The success of a transaction is determined by the number of times the program executes the contract. The current handling fee is the maximum acceptable handling fee. If the transaction fails, the fee for the number of executed contracts</string>
    <string name="send_dialog_btn2">Confirm</string>
    <string name="send_dialog_title">payment details</string>
    <string name="send_dialog_title2">confirm password</string>
    <string name="send_dialog_pwd_hint">Enter the wallet password</string>
    <string name="send_not_to_hint">Please enter the transfer address</string>
    <string name="send_not_amount_hint">Please enter the transfer amount</string>
    <string name="send_not_amount_hint2">Transfer amount must be greater than 0</string>
    <string name="send_amout_hint">Too few transfers to provide services</string>
    <string name="send_amout_not_balance1">The ETH balance is insufficient to carry out contract transfer</string>
    <string name="send_amout_not_balance">The balance is inadequate and cannot be transferred.</string>
    <string name="send_amout_not_balance2">The HTDF balance is insufficient to carry out contract transfer</string>
    <string name="send_to_e_from_hint">Can\'t transfer money to oneself</string>
    <string name="send_to_hint">payee wallet address</string>
    <string name="send_amount">transfer amount</string>
    <string name="send_type">transfer </string>
    <string name="send_address_error">Invalid address</string>
    <string name="send_remark_hint">Remarks </string>
    <string name="send_commit">is sending a transaction…</string>
    <string name="send_fee_txt">Miner cost</string>
    <string name="send_not_data">No data available for the time being</string>
    <string name="walletinfo_title">Wallet information</string>
    <string name="walletinfo_item3">Export private key</string>
    <string name="walletinfo_item4">export keystore</string>
    <string name="walletinfo_item5">Export mnemonic</string>
    <string name="walletinfo_btn">delete wallet</string>
    <string name="walletinfo_dialog_name_title">wallet name</string>
    <string name="coin_dialog_close">Cancel</string>
    <string name="updatepwd_new_pwd_hint">new password</string>
    <string name="updatepwd_new_pwd_hint2">Enter new password again</string>
    <string name="edittext_input_type">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghigjklmnopqrstuvwxyz0123456789</string>
</resources>