<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <com.weiyu.baselib.widget.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarBackground="@color/white"
        app:titleBarLeftImage="@mipmap/back_icon"
        app:titleBarTitle="@string/splash_btn_create" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:background="@color/bg_f5f5f5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/tishi"
            android:drawablePadding="@dimen/dp16"
            android:text="@string/import_txt_hint"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/dp12" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp8"
        android:background="@null"
        android:hint="@string/import_input_name_hint"
        android:inputType="text"
        android:maxLength="20"
        android:singleLine="true"
        android:textSize="@dimen/dp14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginHorizontal="@dimen/dp16"
        android:background="@color/line_dddddd" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp8"
        android:background="@null"
        android:digits="@string/edittext_input_type"
        android:hint="@string/import_input_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:textSize="@dimen/dp14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginHorizontal="@dimen/dp16"
        android:background="@color/line_dddddd" />

    <RelativeLayout
        android:id="@+id/rl_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/rb_type"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="@dimen/dp120"
            android:layout_height="2dp"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="@dimen/dp4"
            android:max="90"
            android:progress="20"
            android:progressDrawable="@drawable/progressbar_color" />

        <TextView
            android:id="@+id/tv_pwd_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_type"
            android:layout_alignTop="@+id/tv_type"
            android:layout_alignBottom="@+id/tv_type"
            android:gravity="center_vertical"
            android:text="@string/create_pwd_hint"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/dp10"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_type"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/dp12" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_pwd2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp8"
        android:background="@null"
        android:digits="@string/edittext_input_type"
        android:hint="@string/import_input_pwd_hint2"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:textSize="@dimen/dp14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginHorizontal="@dimen/dp16"
        android:background="@color/line_dddddd" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_language" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/iv_go"
            android:textColor="@color/txt_333333" />

        <ImageView
            android:id="@+id/iv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/go_icon" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginHorizontal="@dimen/dp16"
        android:visibility="gone"
        android:background="@color/line_dddddd" />

    <CheckBox
        android:id="@+id/cb_htdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:button="@drawable/checkbox_style"
        android:checked="true"
        android:paddingLeft="@dimen/dp8"
        android:text="@string/create_htdf"
        android:textColor="@color/txt_333333"
        android:textSize="@dimen/dp14"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp16"
        android:onClick="agree"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp16">

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp8"
            android:src="@mipmap/weixuanze1zhuangtai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_txt_agree"
            android:textSize="@dimen/dp14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pri"
            android:text="@string/import_txt_privacy"
            android:textColor="@color/title_bg_5f8def"
            android:textSize="@dimen/dp14" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp12"
        android:gravity="center"
        android:elevation="@dimen/elevation_1"
        android:paddingVertical="@dimen/dp12"
        android:background="@drawable/btn_cccccc_selector"
        android:enabled="false"
        android:onClick="create"
        android:text="@string/splash_btn_create"
        android:textColor="@color/white" />

</LinearLayout>